loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:2: error: not found: value Orange
while (getGroundColor()!=Orange) {if (NBag>=3) {left()}
                         ^