loopdowhile.Poucet1.scala.code
var NBag:Int=0
while (getGroundColor()!=Orange) {if (NBag>=3) {left()}
                                  else if (NBag<=2) {right()};
                                  NBag=0; 
                                  for (stepper<-1 to 5) {forward(); 
                                                         if (isOverBaggle()) {NBag=NBag+1}}
                                 }